# easyprofile

./: README.md  easyprofile.py  pyproject.toml  test_easyprofile.py
.github/workflows/: publish.yml  pull_request.yml  release.yml  test.yml
