[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "profile"
authors = [{name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/ntessore/profile"
Issues = "https://github.com/ntessore/profile/issues"

[tool.flit.sdist]
exclude = [".*"]
